--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,19 @@
 [package]
 name = "email_newsletter"
 version = "0.1.0"
+authors = ["Renato Diniz <renatodinizc@gmail.com>"]
 edition = "2021"
+
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "email_newsletter"
 
 [dependencies]
 actix-web = "4.5.1"
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
+
+[dev-dependencies]
+reqwest = "0.11.24"
