--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,21 @@ name = "email_newsletter"
 
 [dependencies]
 actix-web = "4.5.1"
+config = "0.14.0"
+serde = { version = "1.0.197", features = ["derive"] }
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
+
+[dependencies.sqlx]
+version = "0.7"
+default-features = false
+features = [
+  "runtime-tokio-rustls",
+  "macros",
+  "postgres",
+  "uuid",
+  "chrono",
+  "migrate"
+]
 
 [dev-dependencies]
 reqwest = "0.11.24"
