--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,11 @@ name = "email_newsletter"
 
 [dependencies]
 actix-web = "4.5.1"
+chrono = { version = "0.4.34", features = ["clock"] }
 config = "0.14.0"
 serde = { version = "1.0.197", features = ["derive"] }
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
+uuid = { version = "1.7.0", features = ["v4"] }
 
 [dependencies.sqlx]
 version = "0.7"
