--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ name = "email_newsletter"
 actix-web = "4.5.1"
 chrono = { version = "0.4.34", features = ["clock"] }
 config = "0.14.0"
+env_logger = "0.11.2"
+log = "0.4.21"
 serde = { version = "1.0.197", features = ["derive"] }
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 uuid = { version = "1.7.0", features = ["v4"] }
